--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -611,3 +612,8 @@ FodyWeavers.xsd
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio
 
+### Project-specific files and directories ###
+data/
+models/
+results/
+maps/
