--- a/.gitignore
+++ b/.gitignore
@@ -609,6 +609,8 @@ FodyWeavers.xsd
 
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
+launch.json
+settings.json
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio
 
