--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 *.tif filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+.png filter=lfs diff=lfs merge=lfs -text
+.pdf filter=lfs diff=lfs merge=lfs -text
