--- a/trait_mapping.json
+++ b/trait_mapping.json
@@ -1,1 +1,167 @@
-{"4": {"short": "SSD", "long": "Stem specific density (SSD) or wood density (stem dry mass per stem fresh volume)"}, "6": {"short": "Root rooting depth", "long": "Root rooting depth"}, "11": {"short": "SLA", "long": "Leaf area per leaf dry mass (specific leaf area, SLA or 1/LMA)"}, "13": {"short": "Leaf C", "long": "Leaf carbon (C) content per leaf dry mass"}, "14": {"short": "Leaf N", "long": "Leaf nitrogen (N) content per leaf dry mass"}, "15": {"short": "Leaf P", "long": "Leaf phosphorus (P) content per leaf dry mass"}, "18": {"short": "Plant height", "long": "Plant height"}, "21": {"short": "Stem diameter", "long": "Stem diameter"}, "26": {"short": "Seed dry mass", "long": "Seed dry mass"}, "27": {"short": "Seed length", "long": "Seed length"}, "46": {"short": "Leaf thickness", "long": "Leaf thickness"}, "47": {"short": "LDMC", "long": "Leaf dry mass per leaf fresh mass (leaf dry matter content, LDMC)"}, "50": {"short": "Leaf N per area", "long": "Leaf nitrogen (N) content per leaf area"}, "55": {"short": "Leaf dry mass", "long": "Leaf dry mass (single leaf)"}, "78": {"short": "Leaf delta 15N", "long": "Leaf nitrogen (N) isotope signature (delta 15N)"}, "95": {"short": "Seed germination rate", "long": "Seed germination rate (germination efficiency)"}, "138": {"short": "Seed number per reproduction unit", "long": "Seed number per reproduction unit"}, "144": {"short": "Leaf length", "long": "Leaf length"}, "145": {"short": "Leaf width", "long": "Leaf width"}, "146": {"short": "Leaf C/N ratio", "long": "Leaf carbon/nitrogen (C/N) ratio"}, "163": {"short": "Leaf fresh mass", "long": "Leaf fresh mass"}, "169": {"short": "Stem conduit density", "long": "Stem conduit density (vessels and tracheids)"}, "223": {"short": "Chromosome number", "long": "Species genotype: chromosome number"}, "224": {"short": "Chromosome cDNA content", "long": "Species genotype: chromosome cDNA content"}, "237": {"short": "Dispersal unit length", "long": "Dispersal unit length"}, "281": {"short": "Stem conduit diameter", "long": "Stem conduit diameter (vessels, tracheids)"}, "282": {"short": "Wood vessel element length", "long": "Wood vessel element length; stem conduit (vessel and tracheids) element length"}, "289": {"short": "Wood fiber lengths", "long": "Wood fiber lengths"}, "1080": {"short": "SRL", "long": "Root length per root dry mass (specific root length, SRL)"}, "3112": {"short": "Leaf area (3112)", "long": "Leaf area (in case of compound leaves: leaf, undefined if petiole in- or excluded)"}, "3113": {"short": "Leaf area (3113)", "long": "Leaf area (in case of compound leaves: leaflet, undefined if petiole is in- or excluded)"}, "3114": {"short": "Leaf area (3114)", "long": "Leaf area (in case of compound leaves: undefined if leaf or leaflet, undefined if petiole is in- or excluded)"}, "3120": {"short": "Leaf water content per leaf dry mass", "long": "Leaf water content per leaf dry mass (not saturated)"}}
+{
+    "4": {
+        "short": "SSD",
+        "long": "Stem specific density (SSD) or wood density (stem dry mass per stem fresh volume)",
+        "unit": "g cm3"
+    },
+    "6": {
+        "short": "RRD",
+        "long": "Root rooting depth",
+        "unit": "m"
+    },
+    "11": {
+        "short": "SLA",
+        "long": "Leaf area per leaf dry mass (specific leaf area, SLA or 1/LMA): undefined if petiole is included or excluded)",
+        "unit": "m2 kg\u22121"
+    },
+    "13": {
+        "short": "Leaf C",
+        "long": "Leaf carbon (C) content per leaf dry mass",
+        "unit": "mg g\u22121"
+    },
+    "14": {
+        "short": "Leaf N (mass)",
+        "long": "Leaf nitrogen (N) content per leaf dry mass",
+        "unit": "mg g\u22121"
+    },
+    "15": {
+        "short": "Leaf P",
+        "long": "Leaf phosphorus (P) content per leaf dry mass",
+        "unit": "mg g\u22121"
+    },
+    "18": {
+        "short": "Plant height",
+        "long": "Plant height",
+        "unit": "m"
+    },
+    "21": {
+        "short": "Stem diameter",
+        "long": "Stem diameter",
+        "unit": "m"
+    },
+    "26": {
+        "short": "Seed mass",
+        "long": "Seed dry mass",
+        "unit": "mg"
+    },
+    "27": {
+        "short": "Seed length",
+        "long": "Seed length",
+        "unit": "mm"
+    },
+    "46": {
+        "short": "Leaf thickness",
+        "long": "Leaf thickness",
+        "unit": "mm"
+    },
+    "47": {
+        "short": "LDMC",
+        "long": "Leaf dry mass per leaf fresh mass (leaf dry matter content, LDMC)",
+        "unit": "g g-1"
+    },
+    "50": {
+        "short": "Leaf N (area)",
+        "long": "Leaf nitrogen (N) content per leaf area",
+        "unit": "g m\u22122"
+    },
+    "55": {
+        "short": "Leaf dry mass",
+        "long": "Leaf dry mass (single leaf)",
+        "unit": "g"
+    },
+    "78": {
+        "short": "Leaf delta 15N",
+        "long": "Leaf nitrogen (N) isotope signature (delta 15N)",
+        "unit": "ppm"
+    },
+    "95": {
+        "short": "Seed germination rate",
+        "long": "Seed germination rate (germination efficiency)",
+        "unit": "days"
+    },
+    "138": {
+        "short": "Seed number",
+        "long": "Seed number per reproduction unit",
+        "unit": "-"
+    },
+    "144": {
+        "short": "Leaf length",
+        "long": "Leaf length",
+        "unit": "mm"
+    },
+    "145": {
+        "short": "Leaf width",
+        "long": "Leaf width",
+        "unit": "mm"
+    },
+    "146": {
+        "short": "Leaf C/N ratio",
+        "long": "Leaf carbon/nitrogen (C/N) ratio",
+        "unit": "g g\u22121"
+    },
+    "163": {
+        "short": "Leaf fresh mass",
+        "long": "Leaf fresh mass",
+        "unit": "g"
+    },
+    "169": {
+        "short": "Stem conduit density",
+        "long": "Stem conduit density (vessels and tracheids)",
+        "unit": "mm\u22122"
+    },
+    "223": {
+        "short": "Chromosome number",
+        "long": "Species genotype: chromosome number",
+        "unit": "-"
+    },
+    "224": {
+        "short": "Chromosome cDNA content",
+        "long": "Species genotype: chromosome cDNA content",
+        "unit": "Gb"
+    },
+    "237": {
+        "short": "Dispersal unit length",
+        "long": "Dispersal unit length",
+        "unit": "mm"
+    },
+    "281": {
+        "short": "Stem conduit diameter",
+        "long": "Stem conduit diameter (vessels, tracheids)",
+        "unit": "\u03bcm"
+    },
+    "282": {
+        "short": "Conduit element length",
+        "long": "Wood vessel element length; stem conduit (vessel and tracheids) element length",
+        "unit": "\u03bcm"
+    },
+    "289": {
+        "short": "Wood fiber lengths",
+        "long": "Wood fiber lengths",
+        "unit": "\u03bcm"
+    },
+    "1080": {
+        "short": "SRL",
+        "long": "Root length per root dry mass (specific root length, SRL)",
+        "unit": "cm g"
+    },
+    "3112": {
+        "short": "Leaf area",
+        "long": "Leaf area (in case of compound leaves: leaf, undefined if petiole in- or excluded)",
+        "unit": "mm2"
+    },
+    "3113": {
+        "short": "Leaf area",
+        "long": "Leaf area (in case of compound leaves: leaflet, undefined if petiole is in- or excluded)",
+        "unit": "mm2"
+    },
+    "3114": {
+        "short": "Leaf area",
+        "long": "Leaf area (in case of compound leaves: undefined if leaf or leaflet, undefined if petiole is in- or excluded)",
+        "unit": "mm2"
+    },
+    "3120": {
+        "short": "Leaf water content",
+        "long": "Leaf water content per leaf dry mass (not saturated)",
+        "unit": "g g-1"
+    }
+}
